--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="winner"></div>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="/sdk/ta.min.js"></script>
+  <script src="http://apps.twitchalerts.com/sdk/ta.min.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
