--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,14 @@
 </head>
 <body>
   <div class="trivia-cont">
-    <div class="winner-cont">
-      <h3>Winner!</h3>
+    <div class="winner-img-cont">
+      test
       <img class="winner-img" src="" alt="">
-      <div class="winner-name"></div>
     </div>
-    <div class="question-cont">
-      <div class="question"><b>Question:</b></div>
-      <div class="text-area"></div>
-    </div>
+    <div class="text-area"></div>
   </div>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="http://apps.twitchalerts.com/sdk/ta.min.js"></script>
-  <script type="text/javascript"
-          src="http://cdnjs.cloudflare.com/ajax/libs/string_score/0.1.10/string_score.min.js"></script>
   <script src="dist/js/app.min.js"></script>
 </body>
 </html>
