Debounce messages and also only check for integers

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <div id="current-number"></div>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.0.0/lodash.js"></script>
   <script src="http://staging.apps.twitchalerts.com/sdk/ta.min.js"></script>
   <script src="dist/js/app.min.js"></script>
 </body>
